# DocuAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
app/: mcp_server.py  test_mcp.py
app/agent/: graph.py  nodes.py  router.py  state.py
app/api/: routes.py
app/core/: config.py
app/rag/: chunker.py  embedder.py  loader.py  retriever.py
k8s/: deployment.yaml  service.yaml
