[project]
name = "docuagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.43.1",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.15",
    "langchain-anthropic>=1.4.1",
    "langchain-aws>=1.4.5",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "mcp>=1.27.0",
    "numpy==2.4.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]

